create html and css skeleteon with functionality

--- a/FormValidation/index.html
+++ b/FormValidation/index.html
@@ -17,13 +17,23 @@
 
         <div class="form-control">
           <label for="userName">User Name</label>
-          <input type="text" id="userName" placeholder="Enter User Name" />
+          <input
+            type="text"
+            id="userName"
+            placeholder="Enter User Name"
+            data-name="User Name"
+          />
           <small>Error message</small>
         </div>
 
         <div class="form-control">
           <label for="userEmail">User Email</label>
-          <input type="text" id="userEmail" placeholder="Enter User Email" />
+          <input
+            type="text"
+            id="userEmail"
+            placeholder="Enter User Email"
+            data-name="User Email"
+          />
           <small>Error message</small>
         </div>
 
@@ -33,6 +43,7 @@
             type="password"
             id="userPassword"
             placeholder="Enter User Password"
+            data-name="User Password"
           />
           <small>Error Password</small>
         </div>
@@ -41,8 +52,9 @@
           <label for="userPassword2">User Password</label>
           <input
             type="password"
-            id="userPassword"
+            id="userPassword2"
             placeholder="Enter User Password again"
+            data-name="User Password"
           />
           <small>Error Password</small>
         </div>
